Displace Modifier errors using a baked Image and displace baking inconsistency between 2.67/2.68RC and previous versions #36058

Closed
opened 2013-07-08 14:30:14 +02:00 by Daniel F. R. Gordillo · 9 comments

%%%--- Operating System, Graphics card ---
Linux Mint debian edition, AMD Phenom II X6 1090T, 8GB RAM, Nvidia 460 GTX

- Blender version with error, and version that worked ---

Working: 2.63, error: 2.67b - 2.68 RC

- Short description of error ---

When i open some files that have objects using the displace modifier with a previously baked image from a Hi-Poly object, sometimes the mesh went crazy, like inside out. (it happened mostly when clicking on the visibility button on the modifier. When switching the visibility back on, the mesh would be all messed up)

So, in 2.67b and 2.68 RC versions, if the displacement looks OK when loading the file, going to the texture panel and switching "input color space" from default sRGB to Linear or Non-color, and back to sRGB, that will trigger the bug.

Also, doing some tests, the result of baking a displacement map in 2.63 and 2.67b/2.68 RC is different (images attached). I'm using the exact same settings in all three: 2.63 image is OK, but the image baked on the other 2 versions has a lot more contrast, so the displacement becomes exaggerated.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

i'm uploading a graphic guide using a blend file (i'm uploading it to dropbox: it's a ZIP which contains the blend file along with 2 baked images. The *.blend is over 40 Mb)
%%%

%%%--- Operating System, Graphics card --- Linux Mint debian edition, AMD Phenom II X6 1090T, 8GB RAM, Nvidia 460 GTX - Blender version with error, and version that worked --- Working: 2.63, error: 2.67b - 2.68 RC - Short description of error --- When i open some files that have objects using the displace modifier with a previously baked image from a Hi-Poly object, sometimes the mesh went crazy, like inside out. (it happened mostly when clicking on the visibility button on the modifier. When switching the visibility back on, the mesh would be all messed up) So, in 2.67b and 2.68 RC versions, if the displacement looks OK when loading the file, going to the texture panel and switching "input color space" from default sRGB to Linear or Non-color, and back to sRGB, that will trigger the bug. Also, doing some tests, the result of baking a displacement map in 2.63 and 2.67b/2.68 RC is different (images attached). I'm using the exact same settings in all three: 2.63 image is OK, but the image baked on the other 2 versions has a lot more contrast, so the displacement becomes exaggerated. - Steps for others to reproduce the error (preferably based on attached .blend file) --- i'm uploading a graphic guide using a blend file (i'm uploading it to dropbox: it's a ZIP which contains the blend file along with 2 baked images. The *.blend is over 40 Mb) %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Here it is (blend file, 2 baked images and the graphic explanation):

https://www.dropbox.com/s/u7boll6qzxmgfi0/prueba_displace.zip%%%

%%%Here it is (blend file, 2 baked images and the graphic explanation): https://www.dropbox.com/s/u7boll6qzxmgfi0/prueba_displace.zip%%%

%%%Baked images are not so helpful for bugfixing. Please attach file used for baking so it's easy to reproduce baking differences in 2.63 and new blender.
Also please attach file which demonstrates the issue with wrong displacement modifier when toggling visibility or changing color space.

This would save lots of time reproducing exact circumstances of the issue.%%%

%%%Baked images are not so helpful for bugfixing. Please attach file used for baking so it's easy to reproduce baking differences in 2.63 and new blender. Also please attach file which demonstrates the issue with wrong displacement modifier when toggling visibility or changing color space. This would save lots of time reproducing exact circumstances of the issue.%%%

%%%the blend file is in the ZIP (dropbox link in my previous comment)%%%

%%%the blend file is in the ZIP (dropbox link in my previous comment)%%%

%%%I did't actually understand what exactly that file shows. I've tried to bake from Plano.HiPoly onto a Plane (disabled all the modifiers first) and bake result is the same in 2.63a and 2.67b.
And i wasn't been able to reproduce werideness by toggling modifiers visibility or changing image color space.

There're too many circumstances to be taken into account when you're baking. So please, prepare file for which it'll be just matter of pressing "Bake" to see the differences between 2.63a and 2.67b. Same goes to the modifier visibility issue: please prepare file which is just enough to open and toggle the visibility/change color space to screw up displacement.%%%

%%%I did't actually understand what exactly that file shows. I've tried to bake from Plano.HiPoly onto a Plane (disabled all the modifiers first) and bake result is the same in 2.63a and 2.67b. And i wasn't been able to reproduce werideness by toggling modifiers visibility or changing image color space. There're too many circumstances to be taken into account when you're baking. So please, prepare file for which it'll be just matter of pressing "Bake" to see the differences between 2.63a and 2.67b. Same goes to the modifier visibility issue: please prepare file which is just enough to open and toggle the visibility/change color space to screw up displacement.%%%

%%%I will try to make a couple of better files.

It's tricky because i have been seeing this kinf of behaviour for a while now (i believe all the 2.6x series), but until now i couldn't say what triggers the displace error. Even now, the error doesn't show up every time (see attachment "displacemap_GOBLIN.jpg") Sometimes i open the file and it's like that, and sometimes i have to disable/enable the modifier to trigger it.%%%

%%%I will try to make a couple of better files. It's tricky because i have been seeing this kinf of behaviour for a while now (i believe all the 2.6x series), but until now i couldn't say what triggers the displace error. Even now, the error doesn't show up every time (see attachment "displacemap_GOBLIN.jpg") Sometimes i open the file and it's like that, and sometimes i have to disable/enable the modifier to trigger it.%%%

%%%i'm uploading "zombie_displace-test.blend".
1.- Open up the file in 2.76b or 2.68 RC. The head will look OK. (the displacement image uses default Input Color Space: sRGB)
2.- Go to the displace modifier and click on the visibility icon to turn it off. Click again to turn it on. The mesh is all messed up.

If you can't trigger the bug this way, just go to the textures panel, and change Color Input Space from sRGB -> Linear/Non-Color -> sRGB. Then it should be messed up. %%%

%%%i'm uploading "zombie_displace-test.blend". 1.- Open up the file in 2.76b or 2.68 RC. The head will look OK. (the displacement image uses default Input Color Space: sRGB) 2.- Go to the displace modifier and click on the visibility icon to turn it off. Click again to turn it on. The mesh is all messed up. If you can't trigger the bug this way, just go to the textures panel, and change Color Input Space from sRGB -> Linear/Non-Color -> sRGB. Then it should be messed up. %%%

%%%Fixed in svn rev58270, Thanks for the report, closing.%%%

%%%Fixed in svn rev58270, Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36058
No description provided.